# fairness-incomplete-data

./: README.md  main.ipynb  main.py  paper_visualisations.py  plot_real_data_bounds.py  pyproject.toml  run_and_plot.py
docs/: index.html
experiments/: known_data.py  known_joint.py  main.py  marginals.py  run_experiment.py  run_experiment_real_data.py
real_data/: process_data.py
real_data/interim/: adult_data.csv  adult_data1.csv  compas_data.csv  german_data.csv
real_data/processed/: adult_clean.csv  compas_clean.csv  german_clean.csv
results/: experiment_results.csv  experiment_results_1.csv  experiment_results_1000_const.csv  experiment_results_1000_severe_inconst.csv  experiment_results_1000_severe_inconst1.csv
results/real_data/: adult_data_di_dd_kl.csv  compas_data_di_dd_kl.csv  german_data_di_dd_kl.csv
src/: classifier.py  correlations.py  generate_marginal_pairs.py  get_fairness_results.py  obtain_joint_list.py  plot_dists.py  visualisation.py
src/data/: compute_dist.py  data_processing.py  marginals.py
src/inconst_joint/: distributions.py  experiment.py  experiment_real_data.py  visualise.py
src/joint_est_with_assum/: assumption_estimation.py  em_algorithm.py  experiment.py  indep_overlap_with_dist.py  marginal_preservation_with_dist.py
src/joint_feasible_set/: break_consistency.py  distributions.py  experiment.py  experiment_real_data.py  metrics.py  valid_joint.py  visualise.py
test/: em-test.py  test_run.py
