[tool.poetry]
name = "joint-dist-toy"
version = "0.0.1"
description = ""
authors = ["Varsha R <varsharamineni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scipy = "^1.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
